tone test added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="floatingcontent" id="startcontent">
         <h1 class="start">Test Your Vision</h1>
         <p class="start">How good is your eye sight?</p>
-        <div id="start" class="btn start">Start Test</div>
+        <div id="start" class="btn start">Tests</div>
     </div>
     <script src="script.js"></script>
 </body>
